packages/shulker-operator/src/reconcilers/proxy_fleet/snapshots/shulker_operator__reconcilers__proxy_fleet__config_map__tests__create_snapshot.snap
---
source: packages/shulker-operator/src/reconcilers/proxy_fleet/config_map.rs
expression: config_map
---
apiVersion: v1
kind: ConfigMap
metadata:
  labels:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/name: my-proxy
    minecraftcluster.shulkermc.io/name: my-cluster
    proxyfleet.shulkermc.io/name: my-proxy
  name: my-proxy-config
  namespace: default

