packages/shulker-operator/src/reconcilers/proxy_fleet/snapshots/shulker_operator__reconcilers__proxy_fleet__config_map__tests__update_snapshot.snap
---
source: packages/shulker-operator/src/reconcilers/proxy_fleet/config_map.rs
expression: config_map
---
apiVersion: v1
kind: ConfigMap
data:
  init-fs.sh: "#!/bin/sh\nset -euo pipefail\nset -o xtrace\n\ncp \"${SHULKER_CONFIG_DIR}/probe-readiness.sh\" \"${PROXY_DATA_DIR}/probe-readiness.sh\"\ncat \"${SHULKER_CONFIG_DIR}/server-icon.png\" | base64 -d > \"${PROXY_DATA_DIR}/server-icon.png\"\n\nif [ \"${TYPE}\" == \"VELOCITY\" ]; then\n  cp \"${SHULKER_CONFIG_DIR}/velocity-config.toml\" \"${PROXY_DATA_DIR}/velocity.toml\"\n  echo \"dummy\" > \"${PROXY_DATA_DIR}/forwarding.secret\"\nelse\n  cp \"${SHULKER_CONFIG_DIR}/bungeecord-config.yml\" \"${PROXY_DATA_DIR}/config.yml\"\nfi\n\nmkdir -p \"${PROXY_DATA_DIR}/plugins\"\nif [ \"${TYPE}\" == \"VELOCITY\" ]; then\n  (cd \"${PROXY_DATA_DIR}/plugins\" && wget \"${SHULKER_MAVEN_REPOSITORY}/io/shulkermc/shulker-proxy-agent/${SHULKER_PROXY_AGENT_VERSION}/shulker-proxy-agent-${SHULKER_PROXY_AGENT_VERSION}-velocity.jar\")\nelse\n  (cd \"${PROXY_DATA_DIR}/plugins\" && wget \"${SHULKER_MAVEN_REPOSITORY}/io/shulkermc/shulker-proxy-agent/${SHULKER_PROXY_AGENT_VERSION}/shulker-proxy-agent-${SHULKER_PROXY_AGENT_VERSION}-bungeecord.jar\")\nfi\n\nif [ ! -z \"${PROXY_PLUGIN_URLS+x}\" ]; then\n  for plugin_url in ${PROXY_PLUGIN_URLS//;/ }; do\n    (cd \"${PROXY_DATA_DIR}/plugins\" && wget \"${plugin_url}\")\n  done\nfi\n\nif [ ! -z \"${PROXY_PATCH_URLS+x}\" ]; then\n  for patch_url in ${PROXY_PATCH_URLS//;/ }; do\n    (cd \"${PROXY_DATA_DIR}\" && wget \"${patch_url}\" -O - | tar -xzv)\n  done\nfi\n"
  probe-readiness.sh: "#!/bin/sh\nset -euo pipefail\nset -o xtrace\n\nif [ -f \"/tmp/drain-lock\" ]; then\n  echo \"Drain lock found\" && exit 1\nfi\n\nbash /health.sh\n"
  server-icon.png: abc==
  velocity-config.toml: "config-version = \"2.5\"\nbind = \"0.0.0.0:25577\"\nmotd = \"A Motd\"\nshow-max-players = 1000\nonline-mode = true\nforce-key-authentication = true\nprevent-client-proxy-connections = true\nforwarding-secret-file = \"/mnt/shulker/forwarding-secret/key\"\nplayer-info-forwarding-mode = \"modern\"\n\n[servers]\nlobby = \"localhost:30000\"\nlimbo = \"localhost:30001\"\ntry = [\"lobby\", \"limbo\"]\n\n[forced-hosts]\n\n[advanced]\nhaproxy-protocol = true\ntcp-fast-open = true\n\n"
metadata:
  labels:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/name: my-proxy
    minecraftcluster.shulkermc.io/name: my-cluster
    proxyfleet.shulkermc.io/name: my-proxy
  name: my-proxy-config
  namespace: default

